[gd_scene load_steps=27 format=3 uid="uid://cmh05idko1whc"]

[ext_resource type="PackedScene" uid="uid://4e66elt4p0ae" path="res://parts/character/mannequin.tscn" id="1"]
[ext_resource type="Script" uid="uid://cxryqwui4apm3" path="res://tests/skeletons/skeleton_code.gd" id="1_7hmg5"]
[ext_resource type="Script" uid="uid://c2ghgefk8hm1x" path="res://tests/skeletons/skeleton_code_ViewportDsiplay.gd" id="2_mhsoy"]
[ext_resource type="Texture2D" uid="uid://5aqv5v3xn7j3" path="res://parts/defaults/texture_grid_01.png" id="3_pkqp5"]

[sub_resource type="ViewportTexture" id="ViewportTexture_msfyh"]
viewport_path = NodePath("ViewportContainer/SubViewport")

[sub_resource type="AnimationNodeAnimation" id="2"]
animation = &"Idle Fists Up"

[sub_resource type="AnimationNodeAnimation" id="3"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="4"]
animation = &"Idle Standing"

[sub_resource type="AnimationNodeAnimation" id="5"]
animation = &"Idle Action"

[sub_resource type="AnimationNodeAnimation" id="9"]
animation = &"Fast Run"

[sub_resource type="AnimationNodeAnimation" id="14"]
animation = &"Standard Walk"

[sub_resource type="AnimationNodeAnimation" id="15"]
animation = &"T-Pose"

[sub_resource type="AnimationNodeBlendSpace2D" id="6"]
resource_name = "blend"
blend_point_0/node = SubResource("2")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("3")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("4")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("5")
blend_point_3/pos = Vector2(-0.9, -0.7)
blend_point_4/node = SubResource("9")
blend_point_4/pos = Vector2(1, -1)
blend_point_5/node = SubResource("14")
blend_point_5/pos = Vector2(-0.9, 0.9)
blend_point_6/node = SubResource("15")
blend_point_6/pos = Vector2(1, 1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0dg5t"]
animation = &"T-Pose"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fmc5w"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="7"]
states/BlendSpace2D/node = SubResource("6")
states/BlendSpace2D/position = Vector2(808.909, 301.318)
states/End/position = Vector2(1067.05, 217.931)
states/Start/position = Vector2(581.818, 301.228)
states/T-Pose/node = SubResource("AnimationNodeAnimation_0dg5t")
states/T-Pose/position = Vector2(759.545, 148.267)
transitions = ["Start", "BlendSpace2D", SubResource("AnimationNodeStateMachineTransition_fmc5w")]
graph_offset = Vector2(115, 154.767)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hlurl"]
albedo_texture = ExtResource("3_pkqp5")
uv1_scale = Vector3(100, 100, 100)

[sub_resource type="BoxMesh" id="10"]
size = Vector3(100, 1, 100)
subdivide_width = 10
subdivide_height = 1
subdivide_depth = 10

[sub_resource type="BoxShape3D" id="12"]
size = Vector3(100, 1, 100)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_hllse"]

[sub_resource type="Sky" id="16"]
sky_material = SubResource("ProceduralSkyMaterial_hllse")

[sub_resource type="Environment" id="17"]
background_mode = 2
sky = SubResource("16")
ssao_enabled = true
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c2c55"]
albedo_color = Color(0.886275, 0.223529, 0.286275, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ser3t"]
size = Vector3(1, 0.02, 0.02)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0ccm8"]
albedo_color = Color(0.239216, 0.470588, 0.231373, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pn4ks"]
albedo_color = Color(0.305882, 0.447059, 1, 1)

[node name="Spatial" type="Node3D"]
script = ExtResource("1_7hmg5")

[node name="ViewportContainer" type="SubViewportContainer" parent="."]

[node name="SubViewport" type="SubViewport" parent="ViewportContainer"]
handle_input_locally = false
msaa_3d = 3
size = Vector2i(1024, 600)
render_target_update_mode = 4

[node name="Camera" type="Camera3D" parent="ViewportContainer/SubViewport"]
transform = Transform3D(0.227875, 0.468811, -0.853399, 0, 0.876458, 0.481479, 0.97369, -0.109717, 0.199723, -2.14968, 2.14065, 0.687521)
fov = 50.2

[node name="mannequin" parent="ViewportContainer/SubViewport" instance=ExtResource("1")]

[node name="Skeleton3D" parent="ViewportContainer/SubViewport/mannequin/Armature" index="0"]
bones/1/position = Vector3(-0.00791038, -0.0371059, -0.0226207)
bones/1/rotation = Quaternion(0.0268782, -0.128966, -0.0129053, 0.991201)
bones/2/position = Vector3(-3.84141e-10, 0.0972186, -0.0118407)
bones/2/rotation = Quaternion(-0.056176, 0.00692544, 0.0153265, 0.998279)
bones/2/scale = Vector3(1, 1, 1)
bones/3/position = Vector3(-1.1567e-09, 0.114206, -1.56077e-05)
bones/3/rotation = Quaternion(0.0369328, 0.00669454, 0.0106459, 0.999239)
bones/4/position = Vector3(-1.27179e-09, 0.130526, -5.53035e-07)
bones/4/rotation = Quaternion(0.0371213, 0.00716052, 0.0106928, 0.999228)
bones/5/position = Vector3(4.57434e-09, 0.146764, 6.86069e-05)
bones/5/rotation = Quaternion(0.0124484, 0.00604844, 0.0144179, 0.9998)
bones/5/scale = Vector3(1, 1, 1)
bones/6/position = Vector3(-2.05675e-09, 0.0672019, 0.0197209)
bones/6/rotation = Quaternion(0.0111011, 0.0244322, -0.000886205, 0.999639)
bones/8/position = Vector3(0.0614401, 0.129872, -0.00222136)
bones/8/rotation = Quaternion(-0.643198, -0.353679, 0.560056, -0.384117)
bones/9/position = Vector3(8.75989e-05, 0.130001, -3.5898e-05)
bones/9/rotation = Quaternion(0.384647, 0.0263052, 0.10864, 0.916271)
bones/10/position = Vector3(-6.06626e-05, 0.255642, -6.73764e-05)
bones/10/rotation = Quaternion(0.0240392, 0.00247013, 0.213068, 0.976739)
bones/10/scale = Vector3(1, 1, 1)
bones/11/position = Vector3(2.77882e-05, 0.233997, -2.42041e-06)
bones/11/rotation = Quaternion(0.110804, -0.021416, 0.00426012, 0.993602)
bones/12/position = Vector3(-0.028681, 0.0393942, 0.0118365)
bones/12/rotation = Quaternion(0.145621, 0.121177, 0.259554, 0.946965)
bones/13/position = Vector3(-0.00405216, 0.0399217, 2.98527e-05)
bones/13/rotation = Quaternion(0.0767239, 0.0593442, -0.348928, 0.932116)
bones/14/position = Vector3(-0.000368759, 0.0359093, 4.78041e-05)
bones/14/rotation = Quaternion(-0.0044967, -0.0103539, -0.0193543, 0.999749)
bones/15/rotation = Quaternion(1.6652e-06, -9.68576e-08, 2.07685e-07, 1)
bones/16/position = Vector3(-0.0348419, 0.117628, 0.00111319)
bones/16/rotation = Quaternion(0.308233, 0.0128998, -0.0101912, 0.951169)
bones/17/position = Vector3(0.000239024, 0.0329649, 1.07869e-05)
bones/17/rotation = Quaternion(0.367074, 1.70823e-05, -0.0575281, 0.928411)
bones/18/position = Vector3(-7.34315e-05, 0.0308153, 1.6085e-05)
bones/18/rotation = Quaternion(0.203379, 0.000774154, -0.0313521, 0.978598)
bones/20/position = Vector3(-0.0102435, 0.123435, -0.00316044)
bones/20/rotation = Quaternion(0.329351, 0.0140397, -0.042309, 0.943155)
bones/21/position = Vector3(0.000103103, 0.0343743, -2.02066e-05)
bones/21/rotation = Quaternion(0.407642, 0.0001791, -0.0629988, 0.910966)
bones/22/position = Vector3(-0.000105022, 0.03158, 6.95943e-05)
bones/22/rotation = Quaternion(0.239227, -7.39672e-05, -0.0336746, 0.970379)
bones/22/scale = Vector3(1, 1, 1)
bones/23/rotation = Quaternion(1.79489e-06, 1.07568e-07, 1.33179e-07, 1)
bones/24/position = Vector3(0.0126129, 0.125149, -0.00270646)
bones/24/rotation = Quaternion(0.379708, 0.00924607, -0.0517574, 0.923611)
bones/25/position = Vector3(-6.48305e-05, 0.0271921, -8.03129e-05)
bones/25/rotation = Quaternion(0.388518, -0.00129663, -0.0610623, 0.919415)
bones/26/position = Vector3(3.81743e-05, 0.0262201, 2.29654e-05)
bones/26/rotation = Quaternion(0.243538, -0.00061793, -0.0387611, 0.969116)
bones/28/position = Vector3(0.0324411, 0.111089, -0.00119129)
bones/28/rotation = Quaternion(0.43144, 0.00815, -0.0836821, 0.898215)
bones/28/scale = Vector3(1, 1, 1)
bones/29/position = Vector3(8.35363e-05, 0.0272882, 4.09284e-05)
bones/29/rotation = Quaternion(0.350055, 0.00784351, -0.053499, 0.935167)
bones/29/scale = Vector3(1, 1, 1)
bones/30/position = Vector3(-2.34337e-05, 0.0220051, 0.000100352)
bones/30/rotation = Quaternion(0.177377, 0.000387452, -0.0295762, 0.983698)
bones/32/position = Vector3(-0.0614227, 0.129838, -0.00169479)
bones/32/rotation = Quaternion(0.653956, -0.351468, 0.540727, 0.395508)
bones/33/position = Vector3(-2.15554e-05, 0.130042, 1.28728e-05)
bones/33/rotation = Quaternion(0.374538, -0.0671442, -0.10952, 0.918269)
bones/33/scale = Vector3(1, 1, 1)
bones/34/position = Vector3(2.14422e-05, 0.255697, -9.30602e-05)
bones/34/rotation = Quaternion(0.0258995, -0.00521895, -0.249088, 0.96812)
bones/35/position = Vector3(-6.89387e-05, 0.234042, -3.78251e-05)
bones/35/rotation = Quaternion(0.0707712, -0.0404159, -0.00534319, 0.996659)
bones/35/scale = Vector3(1, 1, 1)
bones/36/position = Vector3(0.0289201, 0.0405711, 0.0121535)
bones/36/rotation = Quaternion(0.23064, -0.00807488, -0.121995, 0.965328)
bones/37/position = Vector3(0.00428719, 0.0406829, 4.98547e-05)
bones/37/rotation = Quaternion(0.00917499, -0.0824804, 0.328447, 0.94087)
bones/38/position = Vector3(0.000359969, 0.0353562, -8.69088e-05)
bones/38/rotation = Quaternion(-0.0969061, -0.0374458, 0.0491393, 0.993374)
bones/39/rotation = Quaternion(1.83657e-06, -2.32831e-08, -1.44821e-07, 1)
bones/40/position = Vector3(0.0362352, 0.123448, 1.40439e-06)
bones/40/rotation = Quaternion(0.282444, -0.00865321, 0.00246369, 0.959242)
bones/40/scale = Vector3(1, 1, 1)
bones/41/position = Vector3(-0.000114921, 0.0312192, 3.08752e-06)
bones/41/rotation = Quaternion(0.361601, 0.000552201, 0.0469062, 0.931152)
bones/42/position = Vector3(6.04382e-05, 0.0285867, 1.99999e-06)
bones/42/rotation = Quaternion(0.187541, -4.0069e-05, 0.0227804, 0.981993)
bones/42/scale = Vector3(1, 1, 1)
bones/43/rotation = Quaternion(2.7474e-07, 8.84757e-08, -1.53668e-07, 1)
bones/44/position = Vector3(0.00931356, 0.121784, -0.00211096)
bones/44/rotation = Quaternion(0.312383, 0.000502878, 0.00326678, 0.94995)
bones/44/scale = Vector3(1, 1, 1)
bones/45/position = Vector3(-0.000163442, 0.0348407, -7.62125e-05)
bones/45/rotation = Quaternion(0.393889, 0.000197594, 0.0515403, 0.917712)
bones/46/position = Vector3(0.000139796, 0.0321574, 7.66197e-05)
bones/46/rotation = Quaternion(0.264824, 0.000150382, 0.0291564, 0.963856)
bones/48/position = Vector3(-0.012106, 0.122865, -0.00148233)
bones/48/rotation = Quaternion(0.395768, 0.00761194, 0.0169645, 0.918162)
bones/49/position = Vector3(-3.72248e-05, 0.0281546, 0.000105688)
bones/49/rotation = Quaternion(0.341785, -0.000183853, 0.047477, 0.938578)
bones/50/position = Vector3(7.99125e-05, 0.0268908, -8.09474e-05)
bones/50/rotation = Quaternion(0.232359, 0.000872891, 0.0274809, 0.972241)
bones/52/position = Vector3(-0.033155, 0.111925, -0.00131891)
bones/52/rotation = Quaternion(0.412074, 0.0157515, 0.013219, 0.910919)
bones/52/scale = Vector3(1, 1, 1)
bones/53/position = Vector3(-7.939e-05, 0.0265079, -3.80671e-06)
bones/53/rotation = Quaternion(0.363526, 3.74983e-05, 0.052019, 0.93013)
bones/53/scale = Vector3(1, 1, 1)
bones/54/position = Vector3(5.79956e-05, 0.0214107, -8.18943e-06)
bones/54/rotation = Quaternion(0.196708, 0.000207743, 0.0260216, 0.980117)
bones/56/rotation = Quaternion(0.126715, 0.146913, 0.97244, -0.129307)
bones/56/scale = Vector3(1.00002, 1, 1.00001)
bones/57/position = Vector3(2.3112e-06, 0.427876, 4.47209e-07)
bones/57/rotation = Quaternion(-0.163423, -0.00499044, 0.0201124, 0.986339)
bones/57/scale = Vector3(1, 1, 1)
bones/58/rotation = Quaternion(0.495393, -0.0167786, -0.07081, 0.865615)
bones/58/scale = Vector3(1, 1, 1)
bones/59/rotation = Quaternion(0.299025, -0.058188, 0.0169489, 0.952319)
bones/59/scale = Vector3(1, 1, 1)
bones/60/rotation = Quaternion(-3.64089e-08, 2.30841e-06, -8.22001e-08, 1)
bones/61/position = Vector3(-0.0807786, -0.0539934, -0.00751346)
bones/61/rotation = Quaternion(-0.0943479, 0.100695, 0.987962, 0.0699326)
bones/61/scale = Vector3(1.00002, 1, 1.00001)
bones/62/rotation = Quaternion(-0.161964, -0.00534091, -0.0238672, 0.986494)
bones/63/rotation = Quaternion(0.527738, 0.0511439, 0.047394, 0.84654)
bones/63/scale = Vector3(1, 1, 1)
bones/64/position = Vector3(8.62059e-06, 0.162616, -4.79165e-06)
bones/64/rotation = Quaternion(0.301486, 0.0594525, -0.0171153, 0.951461)
bones/64/scale = Vector3(1, 1, 1)

[node name="AnimationPlayer" parent="ViewportContainer/SubViewport/mannequin" index="1"]
root_motion_track = NodePath("Armature/Skeleton3D:RootMotion")
root_motion_local = true

[node name="ViewportDsiplay" type="TextureRect" parent="." node_paths=PackedStringArray("animtree")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_msfyh")
script = ExtResource("2_mhsoy")
animtree = NodePath("../AnimationTree")

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../ViewportContainer/SubViewport/mannequin")
root_motion_track = NodePath("Armature/Skeleton3D:RootMotion")
root_motion_local = false
tree_root = SubResource("7")
anim_player = NodePath("../ViewportContainer/SubViewport/mannequin/AnimationPlayer")
parameters/BlendSpace2D/blend_position = Vector2(0.250902, -0.277061)

[node name="DirectionalLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.490079, -0.844009, 0.217879, 0.34258, 0.416334, 0.842202, -0.801537, -0.338105, 0.493177, 0.942505, 1.25802, 0.211717)
light_color = Color(1, 0.976471, 0.760784, 1)
light_angular_distance = 5.0
shadow_enabled = true
shadow_blur = 0.2
directional_shadow_mode = 1
directional_shadow_split_1 = 0.05
directional_shadow_split_2 = 1.0
directional_shadow_split_3 = 0.0
directional_shadow_max_distance = 82.1

[node name="floormesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
material_override = SubResource("StandardMaterial3D_hlurl")
mesh = SubResource("10")

[node name="StaticBody" type="StaticBody3D" parent="floormesh"]

[node name="CollisionShape" type="CollisionShape3D" parent="floormesh/StaticBody"]
shape = SubResource("12")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("17")

[node name="axis1" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="axis1"]
material_override = SubResource("StandardMaterial3D_c2c55")
mesh = SubResource("BoxMesh_ser3t")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="axis1"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_0ccm8")
mesh = SubResource("BoxMesh_ser3t")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="axis1"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_pn4ks")
mesh = SubResource("BoxMesh_ser3t")

[editable path="ViewportContainer/SubViewport/mannequin"]
